--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,7 @@ jobs:
           node-version: 16
           registry-url: https://registry.npmjs.org/
       
-      - run: npm install
+      - run: npm ci
 
       - name: Create release
         env:
